--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+input {
+    background-color: transparent;
+    border: none;
+    	position: relative;
+    	z-index: 10;
+    	font-size: 16px;
+    	font-weight: 600;
+    	color: #1b1b1b;
+    	background: none;
+    	-webkit-transition: all 200ms ease;
+    	-moz-transition: all 200ms ease;
+    	-ms-transition: all 200ms ease;
+    	-o-transition: all 200ms ease;
+    	transition: all 200ms ease;
+}
+button:hover {
+    input {
+    color: #FFFFFF;
+    }
+}
+
+button span a {
+    color:black;
+}
+
+button span:hover {
+    a {
+    color: white;
+    }
+}
