--- a/lib/assets/stylesheets/contact.css
+++ b/lib/assets/stylesheets/contact.css
@@ -803,7 +803,7 @@ section
 5. Home
 *********************************/
 
-.home
+.home_contact
 {
 	width: 100%;
 	height: 362px;
@@ -813,12 +813,12 @@ section
 	padding-left: 60px;
 	padding-right: 60px;
 }
-.home_container
+.home_container_contact
 {
 	width: 100%;
 	height: 100%;
 }
-.home_background
+.home_background_contact
 {
 	position: absolute;
 	top: 0;
@@ -829,7 +829,7 @@ section
 	background-size: cover;
 	background-position: center center;
 }
-.home_content_container
+.home_content_container_contact
 {
 	position: absolute;
 	top: 53%;
@@ -841,11 +841,11 @@ section
 	transform: translateY(-50%);
 	width: 100%;
 }
-.home_content
+.home_content_contact
 {
 	width: 580px;
 }
-.breadcrumbs ul li
+.breadcrumbs_contact ul li
 {
 	display: inline-block;
 	position: relative;
@@ -853,7 +853,7 @@ section
 	font-weight: 500;
 	color: #e95a5a;
 }
-.breadcrumbs ul li:not(:last-child)::after
+.breadcrumbs_contact ul li:not(:last-child)::after
 {
 	display: inline-block;
 	content: '/';
@@ -861,7 +861,7 @@ section
 	margin-right: 6px;
 	color: #FFFFFF;
 }
-.breadcrumbs ul li a
+.breadcrumbs_contact ul li a
 {
 	font-size: 14px;
 	font-weight: 500;
@@ -872,7 +872,7 @@ section
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
-.breadcrumbs ul li a:hover
+.breadcrumbs_contact ul li a:hover
 {
 	color: #e95a5a;
 }
