--- a/lib/assets/stylesheets/main_styles.css
+++ b/lib/assets/stylesheets/main_styles.css
@@ -483,6 +483,25 @@ section
 {
 	margin-left: 4px;
 }
+
+.profil_links {
+		display: inline-block;
+}
+
+.profil_links a {
+		display: inline-block;
+		vertical-align: middle;
+		font-size: 14px;
+		font-weight: 500;
+		color: #1b1b1b;
+		margin-left: 13px;
+		-webkit-transition: all 200ms ease;
+		-moz-transition: all 200ms ease;
+		-ms-transition: all 200ms ease;
+		-o-transition: all 200ms ease;
+		transition: all 200ms ease;
+}
+
 .search
 {
 	display: inline-block;
