fix login & signup form + font awesome for heroku

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,7 @@
  *= require_tree .
  *= require_self
  *= require bootstrap4/bootstrap.min
- *= require font-awesome-4.7.0/css/font-awesome.min.css 
- *= require font-awesome-4.7.0/css/font-awesome
+                *=require font-awesome
  *= require OwlCarousel2-2.2.1/owl.carousel.css
  *= require OwlCarousel2-2.2.1/owl.theme.default.css
  *= require OwlCarousel2-2.2.1/animate.css
