--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,3 +32,88 @@ button span:hover {
     color: white;
     }
 }
+
+.flash_messages {
+	z-index: 999;
+	top: 120px;
+	margin-left: 60px;
+	margin-right: 60px;
+	text-align: center;
+	align-items: center;
+	border-radius: 50px;
+	box-shadow: 0px 0px 15px -4px rgba(black, .4);
+	-webkit-box-shadow: 0px 0px 15px -4px rgba(black, .4);
+	-moz-box-shadow: 0px 0px 15px -4px rgba(black, .4);
+}
+
+/*Profile dropdown*/
+.user_profile img {
+	height: 35px;
+}
+
+.user_profile {
+	position: relative;
+	display: inline-block;
+	margin-right: 20px;
+}
+
+.user_profile-dropdown-content {
+  visibility: hidden;
+  /* hides sub-menu */
+  	position: absolute;
+  	background-color: #ffffff;
+  	min-width: 160px;
+  	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  	padding: 12px 16px;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  transform: translateY(-2em);
+  z-index: -1;
+  transition: all 0.3s ease-in-out 0s,
+  visibility 0s linear 0.3s,
+  z-index 0s linear 0.01s;
+}
+
+.user_profile:focus .user_profile-dropdown-content,
+.user_profile:focus-within .user_profile-dropdown-content,
+.user_profile:hover .user_profile-dropdown-content {
+	visibility: visible;
+	/* shows sub-menu */
+	opacity: 1;
+	z-index: 1;
+	transform: translateY(0%);
+	transition-delay: 0s, 0s, 0.3s;
+	/* this removes the transition delay so the menu will be visible while the other styles transition */
+}
+
+.profile_links {
+	display: inline-block;
+}
+
+.profile_links a,
+.say_my_name {
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 14px;
+	font-weight: 600;
+	color: #777777;
+	margin-left: 13px;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.say_my_name p {
+	text-align: center;
+	color: #1b1b1b;
+	font-size: 20px;
+	font-weight: 500;
+}
+
+div.user_profile a:hover{
+				color: #e95a5a;
+}
