--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,38 +1,38 @@
 
 <%- if controller_name != 'sessions' %>
 <button class="newsletter_button trans_200"><span>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "S'enregistrer", new_session_path(resource_name) %><br />
 </span></button>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
 <button class="newsletter_button trans_200 mr-2"><span>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to "S'inscrire", new_registration_path(resource_name) %><br />
 </span></button>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
 <button class="newsletter_button trans_200"><span>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <%= link_to "Mot de passe oublié ?", new_password_path(resource_name) %><br />
 </span></button>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
 <button class="newsletter_button trans_200"><span>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
+  <%= link_to "Vous n'avez pas reçu de confirmation d'inscription ?", new_confirmation_path(resource_name) %><br />
 </span></button>
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
 <button class="newsletter_button trans_200"><span>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
+  <%= link_to "Vous n'avez pas reçu d'instruction pour vous débloquer ?", new_unlock_path(resource_name) %><br />
 </span></button>
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
 <button class="newsletter_button trans_200"><span>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <%= link_to "S'enregistrer avec #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
 </span></button>
   <% end -%>
 <% end -%>
