--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
 <body>
   <div class="super_container">
     <%= render "layouts/header" %>
-    <% flash.each do |message_type, message| %>
-    <div class="alert alert-<%= message_type %>">
-      <%= message %>
-    </div>
+      <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %> flash_messages">
+        <%= message %>
+      </div>
     <% end %>
     <%= yield %>
     <%= render "layouts/footer" %>
