--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,6 +53,9 @@
                                                     <div class="profile_links">
                                                         <%= link_to "Déconnexion", destroy_user_session_path, { :class=>"", method: :delete } %>
                                                     </div>
+                                                    <div class="profile_links">
+                                                        <%= link_to "Éditer mes infos", edit_user_registration_path, { :class=>""} %>
+                                                    </div>
                                                 <% end %>
                                             </div>
                                     </div>   
