--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,94 +1,146 @@
-<h2>Edit
-  <%= resource_name.to_s.humanize %>
-</h2>
+<!-- Home -->
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-<%= devise_error_messages! %>
-<!-- User Personnal Info-->
-<div class="field">
-  <%= f.label :Prénom %><br />
-  <%= f.text_field :first_name, autocomplete: "Prénom" %>
+<div class="home_contact">
+  <div class="home_container_contact">
+    <div class="home_background_contact" style="background-image:url(<%= asset_path 'images/contact.jpg'%>)"></div>
+    <div class="home_content_container_contact">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="home_content_contact">
+              <div class="breadcrumbs_contact">
+                <ul>
+                  <li><a href="/">Home</a></li>
+                  <li>Éditer mes infos</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<div class="field">
-  <%= f.label :Nom %><br />
-  <%= f.text_field :last_name, autocomplete: "Nom" %>
+<!-- Contact -->
+
+<div class="contact">
+  <div class="container">
+    <div class="row">
+      <!-- Inscription -->
+      <div class="col-lg-8 contact_col">
+        <div class="get_in_touch">
+          <div class="section_title">S'inscrire</div>
+          <div class="contact_form_container">
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= devise_error_messages! %>
+            <div class="row">
+              <div class="col-xl-6">
+                <!-- Name -->
+                <label for="contact_name">Prénom</label>
+                <%= f.text_field :first_name, autocomplete: "First name", class: "contact_input" %>
+              </div>
+              <div class="col-xl-6 last_name_col">
+                <!-- Email -->
+                <label for="contact_last_name">Nom</label>
+                <%= f.text_field :last_name, autofocus: true, autocomplete: "Name", class: "contact_input" %>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xl-6">
+                <!-- Name -->
+                <label for="contact_name">Numéro de rue</label>
+                <%= f.text_field :street_number, autocomplete: "Street number", class: "contact_input" %>
+              </div>
+              <div class="col-xl-6 last_name_col">
+                <!-- Email -->
+                <label for="contact_last_name">Rue</label>
+                <%= f.text_field :street_name, autofocus: true, autocomplete: "Street", class: "contact_input" %>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xl-12">
+                <label for="contact_name">Informations complémentaires</label>
+                <%= f.text_field :street_name2, autocomplete: "", class: "contact_input" %>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xl-6">
+                <!-- Name -->
+                <label for="contact_name">Code postal</label>
+                <%= f.text_field :zip_code, autocomplete: "Zip code", class: "contact_input" %>
+              </div>
+              <div class="col-xl-6 last_name_col">
+                <!-- Email -->
+                <label for="contact_last_name">Ville</label>
+                <%= f.text_field :city, autofocus: true, autocomplete: "City", class: "contact_input" %>
+              </div>
+            </div>
+
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>En attente de confirmation de :
+              <%= resource.unconfirmed_email %>
+            </div>
+            <% end %>
+
+            <div class="row">
+              <div class="col-xl-6">
+                <!-- Password -->
+              <%= f.label :password %> <i>(ne pas remplir si vous ne souhaitez pas changer)</i><br />
+              <%= f.password_field :password, autocomplete: "new-password", class: "contact_input" %>
+              <% if @minimum_password_length %>
+              <br />
+              <em>
+                <%= @minimum_password_length %> caractères minimum</em>
+              <% end %>
+              </div>
+              <div class="col-xl-6 last_name_col">
+                <!-- Password confirmation -->
+                  <br />
+                  <%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "contact_input" %>
+              </div>
+            </div>
+              <br />
+              <br />
+            <div class="row">
+              <div class="col-xl-12">
+                <%= f.label :current_password %>* <i>(nous avons besoin de votre mot de passe actuel pour effectuer les changements)</i><br />
+                <%= f.password_field :current_password, autocomplete: "current-password", class: "contact_input" %>
+              </div>
+            </div>
+            <button class="newsletter_button trans_200">
+              <span>
+                <%= f.submit "Mettre à jour" %></span>
+            </button>
+            <% end %>
+              <button class="newsletter_button trans_200">
+                <span>
+                <%= link_to("Supprimer mon compte", registration_path(resource_name), method: :delete, data: { confirm: "Êtes-vous sûr ?" }) %>
+                </span>
+              </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Infos -->
+      <div class="col-lg-3 offset-xl-1 contact_col">
+        <div class="contact_info">
+          <div class="contact_info_section">
+            <div class="contact_info_title">Livraison rapide !</div>
+            <div>
+              <img src="<%= asset_path 'fast-delivery.png' %>">
+            </div>
+          </div>
+          <div class="contact_info_section">
+            <div class="contact_info_title">Un problème ? Contactez-nous !</div>
+            <ul>
+              <li>Phone: <span>+53 345 7953 3245</span></li>
+              <li>Email: <span>yourmail@gmail.com</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-<div class="field">
-  <%= f.label :Date_de_naissance %><br />
-  <%= f.date_field :birthdate, autocomplete: "Date de naissance" %>
-</div>
-
-<!-- Address -->
-
-<div class="field">
-  <%= f.label :Numéro_de_rue %><br />
-  <%= f.text_field :street_number, autocomplete: "Numéro" %>
-</div>
-
-<div class="field">
-  <%= f.label :Rue %><br />
-  <%= f.text_field :street_name, autocomplete: "Rue" %>
-</div>
-
-<div class="field">
-  <%= f.label :Informations_complémentaires %><br />
-  <%= f.text_field :street_name2, autocomplete: "" %>
-</div>
-
-<div class="field">
-  <%= f.label :Code_postal %><br />
-  <%= f.text_field :zip_code, autocomplete: "Code postal" %>
-</div>
-
-<div class="field">
-  <%= f.label :Ville %><br />
-  <%= f.text_field :city, autocomplete: "Ville" %>
-</div>
-
-<!-- Email & Pass -->
-
-<div class="field">
-  <%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-</div>
-
-<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-<div>Currently waiting confirmation for:
-  <%= resource.unconfirmed_email %>
-</div>
-<% end %>
-
-<div class="field">
-  <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, autocomplete: "new-password" %>
-  <% if @minimum_password_length %>
-  <br />
-  <em>
-    <%= @minimum_password_length %> characters minimum</em>
-  <% end %>
-</div>
-
-<div class="field">
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-</div>
-
-<div class="field">
-  <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password, autocomplete: "current-password" %>
-</div>
-
-<div class="actions">
-  <%= f.submit "Mettre à jour" %>
-</div>
-<% end %>
-
-<h3>Supprimer mon compte</h3>
-
-<p>
-  <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr ?" }, method: :delete %>
-</p>
-
-<%= link_to "Retour", :back %>
