--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,51 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+select {
+    text-align: center;
+    text-align-last: center;
+    /* webkit*/
+}
+
+option {
+    text-align: left;
+
+    /* reset to left*/
+}
+
+.select_category select {
+    display: block;
+    width: 147px;
+    height: 41px;
+    border: solid 2px #d0d0d0;
+    overflow: hidden;
+    padding-left: 78px;
+    vertical-align: middle;
+    color: #1b1b1b;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.select_quantity_container input {
+    display: block;
+    width: 147px;
+    height: 41px;
+    border: solid 2px #d0d0d0;
+    overflow: hidden;
+    vertical-align: middle;
+    color: #1b1b1b;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: right;
+}
+
+.resize_it img {
+width: 50%;
+height: 50%
+}
+
+.products_show {
+    width: 120px;
+    height: 210px;
+}
