--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+// Product add
+
 select {
     text-align: center;
     text-align-last: center;
@@ -12,6 +14,12 @@ option {
     text-align: left;
 
     /* reset to left*/
+}
+
+#product_description {
+    color: #1b1b1b;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .select_category select {
@@ -40,12 +48,40 @@ option {
     text-align: right;
 }
 
-.resize_it img {
-width: 50%;
-height: 50%
+// All products
+
+.product_image img{
+    max-width: 210px;
+    max-height: 210px;
+    min-width: 210px;
+    min-height: 210px;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
 
+
+
 .products_show {
-    width: 120px;
-    height: 210px;
+    max-width: 210px;
+    max-height: 240px;
+    min-width: 210px;
+    min-height: 240px;
+    padding-bottom: 100px;
+}
+
+.all_product_grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.all_product {
+    max-width: 210px;
+    max-height: 210px;
+    min-width: 210px;
+    min-height: 210px;
+}
+
+.all_product_image img{
+        object-fit: cover;
 }
