--- a/lib/assets/stylesheets/product.css
+++ b/lib/assets/stylesheets/product.css
@@ -5,20 +5,16 @@
 
 [Table of Contents]
 
-1. Fonts
-2. Body and some general stuff
-3. Header
-4. Menu
-5. Home
-6. Product Details
-7. Products
-8. Newsletter
-9. Footer
+
+1. Home
+2. Product Details
+3. Products
+
 
 
 ******************************/
 /*********************************
-5. Home
+1. Home
 *********************************/
 
 .home_product
@@ -84,7 +80,7 @@
 }
 
 /*********************************
-6. Product Details
+2. Product Details
 *********************************/
 
 .product_details
@@ -399,47 +395,35 @@
 }
 
 /*********************************
-7. Products
+3. Products
 *********************************/
-
-.products
-{
+.products {
 	width: 100%;
 	background: #FFFFFF;
-	z-index: 2;
 	padding-top: 89px;
+	z-index: 2;
 }
-.products_title
-{
-	font-size: 30px;
-	font-weight: 500;
-	color: #1b1b1b;
-}
-.product_grid
-{
-	margin-top: 88px;
-}
-.product
-{
+
+.product {
 	width: calc((100% - 90px) / 4);
 	margin-bottom: 59px;
 }
-.product_image
-{
+
+.product_image {
 	width: 100%;
 }
-.product_image img
-{
+
+.product_image img {
 	max-width: 100%;
 }
-.product_content
-{
+
+.product_content {
 	width: 100%;
-	padding-top: 36px;
+	padding-top: 12px;
 	padding-bottom: 38px;
 }
-.product_title a
-{
+
+.product_title a {
 	font-size: 18px;
 	font-weight: 500;
 	color: #1b1b1b;
@@ -450,20 +434,20 @@
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
-.product_title a:hover
-{
+
+.product_title a:hover {
 	color: #e95a5a;
 }
-.product_price
-{
+
+.product_price {
 	font-size: 16px;
 	font-weight: 500;
 	color: #6c6a74;
 	line-height: 0.75;
 	margin-top: 13px;
 }
-.product_extra
-{
+
+.product_extra {
 	position: absolute;
 	top: 0;
 	left: 54px;
@@ -477,210 +461,65 @@
 	transform-origin: top left;
 	transform: rotate(90deg);
 }
-.product_extra a
-{
+
+.product_extra a {
 	display: block;
 	font-size: 16px;
 	font-weight: 500;
 	color: #FFFFFF;
 	line-height: 36px;
 }
-.product_new
-{
+
+.product_new {
 	background: #6c6a74;
 }
-.product_sale
-{
+
+.product_sale {
 	background: #e95a5a;
 }
-.product_hot
-{
+
+.product_hot {
 	background: #1b1b1b;
 }
 
-/*********************************
-8. Newsletter
-*********************************/
-
-.newsletter
-{
-	width: 100%;
-	background: #FFFFFF;
-	padding-bottom: 99px;
-	z-index: 2;
-}
-.newsletter_border
-{
-	width: 100%;
-	border-top: solid 2px #e3e3e3;
-}
-.newsletter_content
-{
-	padding-top: 88px;
-}
-.newsletter_title
+.products_title
 {
 	font-size: 30px;
 	font-weight: 500;
 	color: #1b1b1b;
 }
-.newsletter_text
+.product_grid
 {
-	margin-top: 8px;
-}
-.newsletter_form_container
-{
-	width: 100%;
-	margin-top: 46px;
-}
-.newsletter_form
-{
-	width: 100%;
-}
-.newsletter_input
-{
-	width: 100%;
-	height: 40px;
-	border: none;
-	border-bottom: solid 2px #787878;
-	outline: none;
-	text-align: center;
-}
-.newsletter_button
-{
-	position: relative;
-	width: 178px;
-	height: 61px;
-	border: solid 2px #1b1b1b;
-	background: #FFFFFF;
-	cursor: pointer;
-	margin-top: 55px;
-	overflow: hidden;
-}
-.newsletter_button span
-{
-	display: block;
-	position: relative;
-	z-index: 10;
-	font-size: 16px;
-	font-weight: 600;
-	color: #1b1b1b;
-	background: none;
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 200ms ease;
-}
-.newsletter_button::after
-{
-	content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 150%;
-    height: 100%;
-    background: #1b1b1b;
-    z-index: 0;
-    opacity: 0;
-    -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
-    transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
-    -webkit-transform-origin: 0% 100%;
-    transform-origin: 0% 100%;
-    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
-    transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
-}
-.newsletter_button:hover::after
-{
-	opacity: 1;
-    -webkit-transform: rotate3d(0, 0, 1, 0deg);
-    transform: rotate3d(0, 0, 1, 0deg);
-    -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-    transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-}
-.newsletter_button:hover span
-{
-	color: #FFFFFF;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
-/*********************************
-9. Footer
-*********************************/
+.product_pagination {
+	width: 100%;
+	margin-top: 30px;
+	margin-bottom: 5px;
+}
 
-.footer_overlay
-{
-	width: 100%;
-	height: 129px;
-	background: transparent;
-	z-index: 1;
-}
-.footer
-{
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	z-index: 1;
-}
-.footer_background
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center center;
-}
-.footer_content
-{
-	width: 100%;
-	height: 129px;
-}
-.footer_logo
-{
-	width: 30%;
-}
-.footer_logo a
-{
-	font-size: 30px;
-	line-height: 0.75;
-	color: #1b1b1b;
-	font-weight: 700;
-}
-.copyright
-{
-	width: 40%;
-	text-align: center;
-	font-size: 14px;
-	font-weight: 400;
-	color: #1b1b1b;
-}
-.footer_social
-{
-	width: 30%;
-	text-align: right;
-}
-.footer_social ul li
-{
+.product_pagination ul li {
 	display: inline-block;
 }
-.footer_social ul li:not(:last-child)
-{
-	margin-right: 26px;
+
+.product_pagination ul li:not(:last-child) {
+	margin-right: 3px;
 }
-.footer_social ul li a i
-{
-	font-size: 17px;
-	color: #1b1b1b;
+
+.product_pagination ul li a {
+	font-size: 14px;
+	font-weight: 400;
+	color: #6c6a74;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
-.footer_social ul li a i:hover
-{
-	color: #FFFFFF;
+
+.product_pagination ul li.active a,
+.product_pagination ul li:hover a {
+	color: #1b1b1b;
 }
