--- a/lib/assets/stylesheets/product.css
+++ b/lib/assets/stylesheets/product.css
@@ -88,6 +88,7 @@
 	width: 100%;
 	background: #FFFFFF;
 	z-index: 2;
+	padding-bottom: 50px;
 }
 .details_row
 {
@@ -158,7 +159,7 @@
 	margin-top: 9px;
 	color: #8a8a8a;
 }
-.in_stock_container
+.in_stock_container, .out_of_stock_container
 {
 	margin-top: 22px;
 }
@@ -169,14 +170,23 @@
 	font-weight: 500;
 	color: #6c6a74;
 }
-.in_stock_container span
+.in_stock_container span, .out_of_stock_container span
 {
 	display: inline-block;
 	font-size: 14px;
 	font-weight: 500;
-	color: #44a038;
 	margin-left: 5px;
 }
+
+.in_stock_container span
+{
+	color: #44a038;
+}
+
+.out_of_stock_container span {
+	color: red;
+}
+
 .details_name
 {
 	font-size: 24px;
