--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -66,7 +66,7 @@
                         <% end %>
                         <div class="product_extra product_new"><a href="categories.html">New</a></div>
                         <div class="product_content">
-                            <div class="product_title"><a href="product.html"><%= product.product_name %></a></div>
+                            <div class="product_title"><a href="/product/<%=product.id%>"><%= product.product_name %></a></div>
                             <div class="product_price"><%= number_to_currency(product.price, locale: :fr) %></div>
                         </div>
                     </div>
