--- a/lib/assets/stylesheets/main_styles.css
+++ b/lib/assets/stylesheets/main_styles.css
@@ -815,6 +815,21 @@ section
 	z-index: 2;
 	margin-top: 120px;
 }
+
+.home_new
+{
+		width: 100%;
+		height: 345px;
+		background: #FFFFFF;
+		z-index: 2;
+		margin-top: 50px;
+}
+
+.home_container {
+	width: 100%;
+	height: 100%;
+}
+
 .home_slider_container
 {
 	padding-top: 10px;
