--- a/lib/assets/stylesheets/product.css
+++ b/lib/assets/stylesheets/product.css
@@ -27,23 +27,18 @@
 	padding-left: 60px;
 	padding-right: 60px;
 }
-.home_container
-{
-	width: 100%;
-	height: 100%;
-}
 .home_background
 {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 80%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
 }
-.home_content_container
+.home_content_container_product
 {
 	position: absolute;
 	top: 50%;
@@ -92,7 +87,7 @@
 }
 .details_row
 {
-	margin-top: 95px;
+	margin-top: 0px;
 }
 .details_image
 {
@@ -218,6 +213,7 @@
 .details_text p
 {
 	font-weight: 500;
+	overflow-wrap: break-word;
 }
 .product_quantity_container
 {
