--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
                                         <a href="categories.html">Categories</a>
                                         <ul>
                                             <% @categories.each do |category| %>
-                                                <li><a href="categories.html"><%= category.category_name %></a></li>
+                                                <li><a href="/category/<%= category.id %>"><%= category.category_name %></a></li>
                                             <% end %>
                                         </ul>
                                     </li>
