Admin Board, controllers PhoneBrand & Model & Deliveries, button css modified

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -110,8 +110,7 @@
               </div>
             </div>
             <button class="newsletter_button trans_200">
-              <span>
-                <%= f.submit "Mettre à jour" %></span>
+                <%= f.submit "Mettre à jour" %>
             </button>
             <% end %>
               <button class="newsletter_button trans_200">
