--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -63,8 +63,7 @@
               </div>
             </div>
               <button class="newsletter_button trans_200">
-                <span>
-                <%= f.submit "S'inscrire" %></span>
+                <%= f.submit "S'inscrire" %>
               </button>
             <% end %>
             <%= render "devise/shared/links" %>
