--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -90,8 +90,7 @@
                     </div>
                 </div>
                 <button class="newsletter_button trans_200">
-                    <span>
-                        <%= f.submit "Éditer" %></span>
+                        <%= f.submit "Éditer" %>
                 </button>
                 <% end %>
             </div>
