--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -89,29 +89,9 @@
                             </div>
                         </div>
                         <button class="newsletter_button trans_200">
-                            <span>
-                                <%= f.submit "Ajouter" %></span>
+                                <%= f.submit "Ajouter" %>
                         </button>
                         <% end %>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Infos -->
-            <div class="col-lg-3 offset-xl-1 contact_col">
-                <div class="contact_info">
-                    <div class="contact_info_section">
-                        <div class="contact_info_title">Livraison rapide !</div>
-                        <div>
-                            <img src="<%= asset_path 'fast-delivery.png' %>">
-                        </div>
-                    </div>
-                    <div class="contact_info_section">
-                        <div class="contact_info_title">Un problème ? Contactez-nous !</div>
-                        <ul>
-                            <li>Phone: <span>+53 345 7953 3245</span></li>
-                            <li>Email: <span>yourmail@gmail.com</span></li>
-                        </ul>
                     </div>
                 </div>
             </div>
