--- a/lib/assets/stylesheets/cart.css
+++ b/lib/assets/stylesheets/cart.css
@@ -45,7 +45,7 @@
 	padding-left: 60px;
 	padding-right: 60px;
 }
-.home_background
+.home_background_cart
 {
 	position: absolute;
 	top: 0;
@@ -56,7 +56,7 @@
 	background-size: cover;
 	background-position: center center;
 }
-.home_content_container
+.home_content_container_cart
 {
 	position: absolute;
 	top: 53%;
@@ -68,7 +68,7 @@
 	transform: translateY(-50%);
 	width: 100%;
 }
-.home_content
+.home_content_cart
 {
 	width: 580px;
 }
@@ -104,6 +104,9 @@
 	color: #e95a5a;
 }
 
+.home_cart .breadcrumbs ul li {
+	margin-top: 80px;
+}
 /*********************************
 6. Cart Info
 *********************************/
