--- a/lib/assets/stylesheets/main_styles.css
+++ b/lib/assets/stylesheets/main_styles.css
@@ -16,6 +16,7 @@
 9. Icon Boxes
 10. Newsletter
 11. Footer
+12. Sorting List
 
 
 ******************************/
@@ -1094,6 +1095,16 @@ section
 }
 
 /*********************************
+7. Products
+*********************************/
+
+.products {
+	width: 100%;
+	background: #FFFFFF;
+	z-index: 2;
+}
+
+/*********************************
 8. Ad Extra Large
 *********************************/
 
@@ -1241,7 +1252,8 @@ section
 	margin-top: 55px;
 	overflow: hidden;
 }
-.newsletter_button span
+.newsletter_button span, 
+.newsletter_button input
 {
 	display: block;
 	position: relative;
@@ -1282,9 +1294,21 @@ section
     -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
     transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
-.newsletter_button:hover span
+.newsletter_button:hover span,
+.newsletter_button:hover input
 {
 	color: #FFFFFF;
+}
+
+.newsletter_button input 
+{
+	
+	margin-left: auto;
+	margin-right: auto;
+	top: 28%;
+
+
+
 }
 
 /*********************************
@@ -1367,4 +1391,117 @@ section
 .footer_social ul li a i:hover
 {
 	color: #FFFFFF;
+}
+
+/*********************************
+12. Sorting Bar 
+*********************************/
+
+
+.sorting_bar {
+	width: 100%;
+	padding-top: 12px;
+	padding-bottom: 12px;
+}
+
+.results {
+	font-size: 14px;
+	font-weight: 400;
+	color: #6c6a74;
+}
+
+.item_sorting {
+	display: inline-block;
+
+}
+
+.item_sorting>li {
+	display: inline-block;
+	position: relative;
+	width: 191px;
+	height: 36px;
+	line-height: 32px;
+	cursor: pointer;
+	border: solid 2px #ececec;
+	padding-left: 26px;
+	padding-right: 19px;
+	margin-right: 8px;
+	font-size: 14px;
+	font-weight: 400;
+	color: #6c6a74;
+	margin-bottom: 10px;
+}
+
+.item_sorting>li:last-child {
+	margin-right: 0;
+}
+
+.num_sorting_text {
+	padding-right: 11px;
+}
+
+.item_sorting li i {
+	float: right;
+	line-height: 32px;
+	font-size: 10px;
+	color: #787878;
+}
+
+.item_sorting li ul {
+	display: block;
+	position: absolute;
+	right: 0;
+	top: 120%;
+	margin: 0;
+	width: 100%;
+	background: #FFFFFF;
+	visibility: hidden;
+	opacity: 0;
+	z-index: 1;
+	box-shadow: 0 15px 25px rgba(63, 78, 100, 0.15);
+	-webkit-transition: opacity 0.3s ease;
+	-moz-transition: opacity 0.3s ease;
+	-ms-transition: opacity 0.3s ease;
+	-o-transition: opacity 0.3s ease;
+	transition: all 0.3s ease;
+}
+
+.item_sorting>li:hover ul {
+	visibility: visible;
+	opacity: 1;
+	top: calc(100% + 1px);
+}
+
+.item_sorting li ul li {
+	display: block;
+	text-align: left;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.item_sorting li ul li span {
+	display: block;
+	height: 36px;
+	line-height: 36px;
+	border-bottom: solid 1px #dddddd;
+	color: #6c6a74;
+	text-align: right;
+	padding-right: 5px;
+	-webkit-transition: opacity 0.3s ease;
+	-moz-transition: opacity 0.3s ease;
+	-ms-transition: opacity 0.3s ease;
+	-o-transition: opacity 0.3s ease;
+	transition: all 0.3s ease;
+}
+
+.item_sorting li ul li span:hover {
+	color: #b5aec4;
+}
+
+.item_sorting li ul li:last-child span {
+	border-bottom: none;
+}
+
+.item_sorting li span:nth-child(2) {
+	margin-left: 63px;
 }
