--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -24,26 +24,33 @@
 
 <!-- Cart Info -->
 
-<div class="cart_info">
+<div class="admin_info">
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <!-- Column Titles -->
-                <div class="cart_info_columns clearfix">
-
-                </div>
-            </div>
-        </div>
         <div class="row cart_items_row">
             <div class="col">
-                <h2>Ajouter</h2>
+                <div class="admin_options">
+                    <h2>Ajouter</h2>
+                </div>
+                
                 <div class="cart_item d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start">
                     <div class="button cart_button"><a href="/products/new">Nouveau produit</a></div>
                     <div class="button cart_button"><a href="/models/new">Nouveau modèle</a></div>
                     <div class="button cart_button"><a href="/brands/new">Nouvelle marque</a></div>
-                    <div class="button cart_button"><a href="/category/new">Nouvelle catégorie</a></div>
+                    <div class="button cart_button"><a href="/categories/new">Nouvelle catégorie</a></div>
+                </div>
+                <div class="admin_options">
+                    <h2>Afficher et éditer</h2>
+                </div>
+                <div class="cart_item d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start">
+                    <div class="button cart_button"><a href="/products/all">Produits</a></div>
+                    <div class="button cart_button"><a href="/models/all">Modèles</a></div>
+                    <div class="button cart_button"><a href="/brands/all">Marques</a></div>
+                    <div class="button cart_button"><a href="/categories/all">Catégories</a></div>
                 </div>
                 <div class="row">
+                    <div class="admin_options">
+                        <h2>Liste des produits</h2>
+                    </div>
                     <table class="table">
                         <thead>
                             <tr>
